# auto-bean

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: repository-baseline.yml
_bmad-output/implementation-artifacts/: 1-1-initialize-the-packaged-auto-bean-project-foundation.md  1-2-bootstrap-local-dependencies-and-readiness-checks-on-macos.md  1-3-establish-the-ci-workflow-verification-and-diagnostics-baseline.md  1-4-create-a-new-base-beancount-ledger-workspace.md  1-5-inspect-and-finalize-structural-ledger-changes-through-the-agent-workflow.md  1-5-review-and-approve-structural-ledger-changes-through-the-agent-workflow.md  1-6-deliver-the-codex-first-quickstart-for-first-meaningful-use.md  2-1-import-statement-files-into-a-normalized-intake-workflow.md  2-2-create-or-extend-a-ledger-from-first-time-imported-account-statements.md  2-3-review-normalized-import-results-before-finalizing-direct-ledger-edits.md  2-4-persist-source-specific-import-context-for-repeated-imports.md  3-1-transform-normalized-import-results-into-direct-ledger-postings-with-commit-gated-acceptance.md  3-2-detect-transfers-duplicates-and-unbalanced-outcomes-during-reconciliation.md  3-3-run-clarification-workflows-for-ambiguous-or-unfamiliar-transaction-patterns.md  3-4-validate-inspect-approve-and-recover-ledger-mutations-safely.md  4-1-persist-governed-memory-for-mappings-categorization-naming-and-import-behavior.md  4-2-reuse-learned-memory-in-future-import-and-reconciliation-workflows.md  4-3-inspect-stored-memory-that-influences-future-behavior.md  4-4-correct-or-refine-learned-memory-through-an-explicit-workflow.md  code-review-acceptance-auditor-prompt.md  code-review-blind-hunter-prompt.md  code-review-edge-case-hunter-prompt.md  epic-1-retro-2026-04-03.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-31.md  prd.md  product-brief-auto-bean-distillate.md  product-brief-auto-bean.md  sprint-change-proposal-2026-03-31.md  sprint-change-proposal-2026-04-09.md  (+1 more)
_dev-output/: skill_prompt_review_report-2026-05-10.md  skill_prompt_review_report.md  skills-prompt-evaluation-2026-05-06.md  skills-review-report-2026-04-29.md  skills-review-report.md
docs/: diagnostics.md
scripts/: run_smoke_checks.py
skill_sources/: skills-review-report.md
tests/: test_apply_skill_assets.py  test_import_skill_contract.py  test_init.py  test_init_context7.py  test_memory_assets.py  test_package_foundation.py  test_setup_diagnostics.py  test_smoke.py  test_smoke_checks.py  test_update_removals.py
workspace_template/: AGENTS.md  README.md  ledger.beancount
(+98 files in other folders)
