[project]
name = "auto-bean"
version = "0.1.0"
description = "Local-first coding-agent helpers for operating Beancount ledgers."
readme = "README.md"
authors = [
    { name = "SamArgt", email = "36817478+SamArgt@users.noreply.github.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "beancount",
    "fava",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2",
    "pytest>=7.4,<9",
    "ruff>=0.15.2,<0.16",
]

[project.scripts]
auto-bean = "auto_bean:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests", "scripts"]
strict = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"
